--- a/index.html
+++ b/index.html
@@ -5,92 +5,97 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap & CSS Linke-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
-         <title>Reiseführer_Italien</title>
-       </head>
-    <body>
-<header>
-  <!-- ---navbar -->
-    <div class="sticky-top bg-light p-2 shadow" style="--bs-bg-opacity:0.95"> 
-      <nav class="navbar navbar-expand-lg navbar-light  container">
-          <div class="container-fluid">
-            <a class="navbar-brand fs-3" href="#">Reiseführer-Italien</a>
+                     <title>Reiseführer_Italien</title>
+                    </head>
+                 <body>
+             <header>
+
+      <!-- ---navbar -->
+                   <div class="sticky-top bg-light p-2 shadow " style="--bs-bg-opacity:0.95"> 
+                  <nav class="navbar navbar-expand-lg navbar-light  container" >
+                <div class="container-fluid">
+               <a class="navbar-brand fs-3" href="#">Reiseführer-Italien</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
-               </button>
-                <div class="collapse navbar-collapse" id="navbarColor03">
-                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link text-dark" href="Piemont.html">Piemont</a>
-                 </li>
+                  </button>
+                     <div class="collapse navbar-collapse" id="navbarColor03">
+                       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                         <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                   </li>
                  <li class="nav-item">
-                  <a class="nav-link text-dark" href="rom.html">Rom</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-primary  bg-primary  text-white" type="submit">Search</button>
-              </form>
-            </div>
-          </div>
-        </nav>
-      </div>
-      <!-- überschrift,text und foto in erste Site -->
-       <div class="py-4">
-           <section class="container">
-           <div class="row align-items-center">
-            <div class="col-md-6">
-                <h2 class="display-4 mb-4">Von einem, der auszog<span class="text-warning"> die Welt </span> zu entdecken!</h2>
-                <p class="lead text-muted mb-4">Ob Rom, die Toskana oder die Inseln Sardinien und Sizilien: Fast jeder hat seinen Lieblingsort in Italien, an den er gern zurückkehrt. Die Italiener verstehen es, ihren Gästen ein bisschen Dolce Vita mit auf den Weg zu geben, und ihre Städte verzaubern mit Architektur und Geschichte. Wir nehmen euch mit - an bereits bekannte Orte und Ecken von Italien, die ihr vielleicht noch nicht kennt.</p>
-                <a href="rom.html" class="btn btn-primary">Get Started</a>
-            </div>
-            <div class="col-md-6">
-                <img src="img/Trip-cuate (1).png" class="img-fluid">
-            </div>
-           </div>
-          </section>
-       </div>
-</header>
-<main>
-           <h2 class="text-center m-4 fs-1  bg-warning opacity-75">Schöne fotos von meiner reise nach Italian</h2>
-               <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2" > 
-                  <div class="row ">
-                     <div class="col ">
-                           <img src="img/italian-1.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
-                             </div>
-                                  <div class="col ">
-                                     <img src="img/italian-2.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
-                                     </div>
-                                  <div class="col">
-                                 <img src="img/italian-3.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
-                              </div>
-                            </div>
-                    <div class="row">
-                            <div class="col g-4">
-                               <img src="img/italian-4.jpg" class="rounded float-end  " style="width: 500px; height: 450px;" alt="...">
-                                    </div>
-                                       <div class="col g-4">
-                                         <img src="img/italian-5.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
-                                     </div>
-                                  <div class="col g-4">
-                              <img src="img/italian-6.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
-                        </div>
+                    <a class="nav-link text-dark" href="Piemont.html">Piemont</a>
+                        </li>
+                           <li class="nav-item">
+                          <a class="nav-link text-dark" href="rom.html">Rom</a>
+                       </li>
+                    </ul>
+                 <form class="d-flex">
+                   <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
+                       <button class="btn btn-outline-primary  bg-primary  text-white" type="submit">Search</button>
+                      </form>
+                     </div>
                     </div>
-               </main>
+                  </nav>
+                 </div>
 
- 
-    <footer class="sticky-footer"><p>&copy by  Aisha,Sham und Sprotte 2021 <a href="https://www.geo.de/reisen/reiseziele/14791-thma-italien-reisefuehrer">Die besten Tipps für Urlaub in Bella Italia! </a></p>
-    </footer> 
+      <!-- überschrift,text und foto  in header---->
+                     <div class="py-4">
+                        <section class="container">
+                           <div class="row align-items-center">
+                             <div class="col-md-6">
+                              <h2 class="display-4 mb-4">Von einem, der auszog<span class="text-warning "> die Welt </span> zu entdecken!</h2>
+                              <p class="lead text-muted mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus corporis quas minima est, animi facilis aperiam nisi officiis veniam repudiandae accusamus iusto, impedit eius vel? Maiores incidunt officia amet maxime.</p>
+                            <a href="rom.html" class="btn btn-primary ">Get Started</a>
+                          </div>
+                       <div class="col-md-6">
+                     <img src="img/Trip-cuate (1).png" class="img-fluid">
+                         </div>
+                             </div>
+                             </section>
+                        </div>
+                     </header>
 
-     <!-- Optional JavaScript; choose one of the two! -->
+           <!--Die Fotos in von der teil(schöne fotos)  -->
+                     <main>
+                        <h2 class="text-center m-4 fs-1  bg-warning opacity-75 eli">Schöne fotos von meiner reise nach Italian</h2>
+                          <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2" > 
+                             <div class="row ">
+                             <div class="col ">
+                           <img src="img/italian-1.jpg" class=" bild rounded" style="width: 500px; height: 450px;" alt="...">
+                        </div>
+                    <div class="col ">
+                        <img src="img/italian-2.jpg" class=" bild rounded" style="width: 500px; height: 450px;" alt="...">
+                           </div> 
+                             <div class="col">
+                             <img src="img/italian-3.jpg" class=" bild rounded" style="width: 500px; height: 450px;" alt="...">
+                          </div>
+                        </div>
+                    <div class="row">
+                         <div class="col g-4">
+                            <img src="img/italian-4.jpg" class="bild rounded" style="width: 500px; height: 450px;" alt="...">
+                              </div>
+                              <div class="col g-4">
+                           <img src="img/italian-5.jpg" class="bild  rounded" style="width: 500px; height: 450px;" alt="...">
+                        </div>
+                    <div class="col g-4">
+                          <img src="img/italian-6.jpg" class=" bild  rounded" style="width: 500px; height: 450px;" alt="...">
+                              </div>
+                           </div>
+                        </main>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+             <!---- Footer--- -->
+                          <footer class="sticky-footer "><p>&copy by  Aisha,Sham und Sprotte 2021 <a href="https://www.geo.de/reisen/reiseziele/14791-thma-italien-reisefuehrer">Die besten Tipps für Urlaub in Bella Italia! </a></p>
+                        </footer> 
 
-  </body>
-</html>
+        <!-- Optional JavaScript; choose one of the two! -->
+  
+       <!-- Option 1: Bootstrap Bundle with Popper -->
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/ bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg +OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+      </body>
+   </html>
